Updated to 0.0.3-dev

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "highcharts-ng",
-  "version": "0.0.2",
+  "version": "0.0.3-dev",
   "dependencies": {
     "angular": ">=1.0.4"
   },
