--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "highcharts-ng",
   "version": "0.0.3-dev",
-  "dependencies": {
-    "angular": ">=1.2.0"
-  },
-  "devDependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "angular": "latest",
+    "angular-mocks": "latest",
+    "jquery": "latest"
+  }
 }
