--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "highcharts-ng",
   "version": "0.0.3-dev",
+  "main": "dist/highcharts-ng.js",
   "dependencies": {},
   "devDependencies": {
     "angular": "latest",
-    "angular-mocks": "latest",
-    "jquery": "latest"
+    "angular-mocks": "latest"
   }
 }
