--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highcharts-ng",
-  "version": "0.0.4-dev",
+  "version": "0.0.4",
   "description": "highcharts-ng",
   "keywords": [
     "angular"
