--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "highcharts-ng",
-  "version": "0.0.9-dev",
+  "version": "0.0.9",
   "main": "dist/highcharts-ng.js",
   "dependencies": {},
   "devDependencies": {
