added richer info to bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,19 @@
 {
   "name": "highcharts-ng",
+  "description": "An AngularJS directive for Highcharts, Highstocks or Highmaps",
+  "keywords": [
+    "angularjs",
+    "charts",
+    "highcharts",
+    "highstocks",
+    "highmaps"
+  ],
   "version": "0.0.10-dev",
   "main": "dist/highcharts-ng.js",
+  "license": "MIT",
+  "authors": [
+    { "name": "Barry Fitzgerald" }
+  ],
   "dependencies": {},
   "devDependencies": {
     "angular": "latest",
