--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "connect-livereload": "~0.5.3",
     "grunt-open": "~0.2.2",
     "grunt-karma": "~0.12.0",
-    "grunt-ngmin": "0.0.3",
+    "grunt-ng-annotate": "1.0.1",
     "grunt-bump": "0.5.0",
     "matchdep": "~0.3.0",
     "karma-script-launcher": "~0.1.0",
