tags mostly to trigger rebuild

--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "description": "An AngularJS directive for Highcharts, Highstocks or Highmaps",
   "keywords": [
     "angularjs",
+    "angular",
     "charts",
     "highcharts",
     "highstocks",
