--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "highstocks",
     "highmaps"
   ],
-  "version": "0.0.10",
+  "version": "0.0.11-dev",
   "main": "dist/highcharts-ng.js",
   "license": "MIT",
   "authors": [
