added bower ignore fixes #343

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "test",
     "src",
     "example",
-    ".travis.yml",
+    ".travis.yml"
   ],
   "version": "0.0.11-dev",
   "main": "dist/highcharts-ng.js",
