--- a/package.json
+++ b/package.json
@@ -24,34 +24,32 @@
     "angular": "^1.5.7",
     "angular-mocks": "^1.5.7",
     "connect-livereload": "~0.5.3",
-    "grunt": "~0.4.1",
-    "grunt-bump": "0.5.0",
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-jshint": "~0.11.3",
-    "grunt-contrib-less": "~1.0.1",
-    "grunt-contrib-uglify": "~0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-karma": "~0.12.0",
-    "grunt-ng-annotate": "1.0.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-uglify": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-karma": "^2.0.0",
+    "grunt-ng-annotate": "^2.0.2",
     "grunt-open": "~0.2.2",
     "jasmine-core": "^2.4.1",
     "jquery": "^3.1.0",
-    "karma": "~0.13.9",
-    "karma-chrome-launcher": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.3.0",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.3.6",
-    "karma-phantomjs-launcher": "~0.2.1",
-    "karma-script-launcher": "~0.1.0",
-    "matchdep": "~0.3.0",
-    "phantomjs": "^2.1.7"
+    "karma": "^1.1.1",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "matchdep": "^1.0.1",
+    "phantomjs-prebuilt": "^2.1.7"
   },
   "scripts": {
     "test": "grunt test"
   },
-  "main": "./dist/highcharts-ng"
+  "main": "./dist/highcharts-ng",
+  "dependencies": {}
 }
