--- a/package.json
+++ b/package.json
@@ -31,11 +31,9 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-jshint": "^1.0.0",
-    "grunt-contrib-less": "^1.3.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-karma": "^2.0.0",
-    "grunt-ng-annotate": "^2.0.2",
     "grunt-open": "~0.2.2",
     "jasmine-core": "^2.4.1",
     "jquery": "^3.1.0",
@@ -44,7 +42,7 @@
     "karma-coverage": "^1.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
-    "matchdep": "^1.0.1",
+    "load-grunt-tasks": "^3.5.0",
     "phantomjs-prebuilt": "^2.1.7"
   },
   "scripts": {
