Support commonJS and browserify. Add Highcharts to package dependencies.

--- a/package.json
+++ b/package.json
@@ -47,5 +47,7 @@
     "test": "grunt test"
   },
   "main": "./dist/highcharts-ng",
-  "dependencies": {}
+  "dependencies": {
+    "highcharts": "^5.0.9"
+  }
 }
