--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "example",
     ".travis.yml"
   ],
-  "version": "1.0.2-dev",
+  "version": "1.1.0",
   "main": "dist/highcharts-ng.js",
   "license": "MIT",
   "authors": [
