--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highcharts-ng",
-  "version": "1.0.2-dev",
+  "version": "1.1.0",
   "description": "highcharts-ng",
   "keywords": [
     "angular"
