Added npm build script for building with local grunt.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "phantomjs-prebuilt": "^2.1.7"
   },
   "scripts": {
+    "build": "grunt",
     "test": "grunt test"
   },
   "main": "./dist/highcharts-ng",
