Prepare for 1.2.1 release

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "example",
     ".travis.yml"
   ],
-  "version": "1.2.1-dev",
+  "version": "1.2.1",
   "main": "dist/highcharts-ng.js",
   "license": "MIT",
   "authors": [
