--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "example",
     ".travis.yml"
   ],
-  "version": "1.2.1",
+  "version": "1.2.2-dev",
   "main": "dist/highcharts-ng.js",
   "license": "MIT",
   "authors": [
