--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "highcharts-ng",
-  "version": "1.2.1",
+  "version": "1.2.2-dev",
   "description": "highcharts-ng",
   "keywords": [
     "angular"
